infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examsy-ingress
  namespace: examsy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: api.examsy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: examsy-api-gateway
                port:
                  number: 8080
    - host: metrics.examsy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: examsy-zipkin
                port:
                  number: 9411
